--- a/preview/angular-cdk-dropdown/angular/components/dropdown/dropdown.component.html
+++ b/preview/angular-cdk-dropdown/angular/components/dropdown/dropdown.component.html
@@ -1,4 +1,10 @@
-<span #trigger class="rte-trigger" (keydown)="handleKeydown($event)">
+<!-- <span #trigger class="rte-trigger" (keydown)="handleKeydown($event)">
   <ng-content></ng-content>
 </span>
 <ng-content select="rte-dropdown-menu" hidden></ng-content>
+ -->
+<span [cdkMenuTriggerFor]="menu"></span>
+
+<ng-template #menu>
+  <h1>asd</h1>
+</ng-template>
