--- a/packages/react/src/components/badge/Badge.module.scss
+++ b/packages/react/src/components/badge/Badge.module.scss
@@ -78,10 +78,10 @@
             }
         }
 
-        p {
-            margin: 0;
+        &[data-simple-badge="true"] {
+            position: static;
+            box-shadow: none;
         }
-
     }
 
 }
