feat(banner): use click output instead of input actionCallback

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
@@ -13,7 +13,7 @@
       <div class="rte-banner-message">
         <span>{{ message() }}</span>
         <rte-button
-          *ngIf="actionLabel() && actionCallback()"
+          *ngIf="actionLabel()"
           variant="neutral"
           [label]="actionLabel()!"
           [ariaLabel]="actionLabel()!"
