fix(banner): conditionally render message and title in banner component + set correct action button size

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/banner/banner.component.html
@@ -10,11 +10,12 @@
     </div>
     <div class="rte-banner-content">
       <span *ngIf="title()" class="rte-banner-title">{{ title() }}</span>
-      <div class="rte-banner-message">
+      <div *ngIf="message()" class="rte-banner-message">
         <span>{{ message() }}</span>
         <rte-button
           *ngIf="actionLabel()"
           variant="neutral"
+          size="s"
           [label]="actionLabel()!"
           [ariaLabel]="actionLabel()!"
           (click)="clickAction()"
