[WiP] feat (dropdown): handle focus trap for nested dropdown menu

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
@@ -4,6 +4,7 @@
   <ul
     class="rte-dropdown-items"
     role="menu"
+    (keydown)="onKeyDown($event)"
   >
     @for (item of items(); track item.label) {
         @if (item.subMenuItems && item.subMenuItems.length > 0) {
