--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-menu/dropdown-menu.component.html
@@ -1,14 +1,20 @@
 <div
   class="rte-dropdown-menu"
+  [attr.aria-hidden]="!isVisible()"
+  [attr.aria-expanded]="isActive()"
 >
-  <ul
-    class="rte-dropdown-items"
-    role="menu"
-    (keydown)="onKeyDown($event)"
+  <ul 
+    class="rte-dropdown-items" 
+    role="menu" 
+    [attr.aria-activedescendant]="menuId()"
   >
-    @for (item of items(); track item.label) {
-        @if (item.subMenuItems && item.subMenuItems.length > 0) {
-            <div rteDropdown>
+    @for (item of items(); track item.label; let i = $index) {
+        @if (item.subMenuItems?.length) {
+            <div 
+              rteDropdown 
+              [context]="{id: getChildMenuId(i), parentId: menuId()}"
+              [attr.data-item-index]="i"
+              [attr.data-has-submenu]="true">
                 <rte-dropdown-item 
                     rteDropdownTrigger 
                     [label]="item.label" 
@@ -16,10 +22,16 @@
                     [trailingText]="item.trailingText" 
                     [disabled]="item.disabled ?? false" 
                     [hasSeparator]="item.hasSeparator ?? false"
-                    [subMenuItems]="item.subMenuItems" 
-                    [hasIndent]="item.hasIndent ?? false">
+                    [subMenuItems]="item.subMenuItems ?? []" 
+                    [hasIndent]="item.hasIndent ?? false"
+                    (click)="item.click?.emit($event)"
+                >
                 </rte-dropdown-item>
-                <rte-dropdown-menu [items]="item.subMenuItems"></rte-dropdown-menu>
+                <rte-dropdown-menu 
+                    [items]="item.subMenuItems ?? []"
+                    [menuId]="getChildMenuId(i)"
+                    [parentMenuId]="menuId()">
+                </rte-dropdown-menu>
             </div>
         } @else {
             <rte-dropdown-item 
