--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.html
@@ -48,6 +48,7 @@
           [direction]="direction()"
           [compactSpacing]="compactSpacing()"
           [isSelected]="isSelected(option.id)"
+          [inverted]="inverted()"
           (keydown)="onKeydownTabItem($event)"
           (click)="onClickTabItem(option.id)"
         ></rte-tab-item>
