--- a/packages/react/src/components/tab/tabitem/TabItem.module.scss
+++ b/packages/react/src/components/tab/tabitem/TabItem.module.scss
@@ -13,8 +13,11 @@
   border: none;
   text-align: left;
   flex-shrink: 0;
-  // margin-left: 2px;
   height: 100%;
+
+  &[data-inverted='true'] {
+    color: var(--content-primary-inverse);
+  }
 
   &[data-direction='vertical'] {
     flex-shrink: 1;
