--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab-item/tab-item.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab-item/tab-item.component.scss
@@ -22,6 +22,10 @@
   height: 100%;
   pointer-events: auto;
 
+  &[data-inverted='true'] {
+    color: var(--content-primary-inverse);
+  }
+
   &[data-direction='vertical'] {
     flex-shrink: 1;
     margin-left: 0px;
