--- a/preview/tab/angular/components/tab/tab-item/tab-item.component.scss
+++ b/preview/tab/angular/components/tab/tab-item/tab-item.component.scss
@@ -2,12 +2,11 @@
 
 :host {
   pointer-events: none;
+  display: flex;
 }
 
 .rte-tabitem {
   @include typography-text-m;
-  position: relative;
-  pointer-events: auto;
   display: flex;
   padding: $positive-spacing_150;
   justify-content: center;
@@ -18,10 +17,26 @@
   cursor: pointer;
   border: none;
   text-align: left;
+  flex-shrink: 0;
+  margin-left: 2px;
+  height: 100%;
+  pointer-events: auto;
+
+  &[data-inverted='true'] {
+    color: var(--content-primary-inverse);
+  }
+
+  &[data-direction='vertical'] {
+    flex-shrink: 1;
+    margin-left: 0px;
+  }
+
+  &[data-hidden='true'] {
+    visibility: hidden;
+  }
 
   &[data-selected='true'],
   &:hover {
-
     &:not([data-disabled='true']) {
       @include typography-text-m-bold;
     }
@@ -55,4 +70,5 @@
   opacity: 0;
   transition: left 0.2s ease,
   width 0.2s ease;
+  z-index: $level-1;
 }
