feat(tab): add overflow type and dropdown support for angular tab component

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab-item/tab-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab-item/tab-item.component.html
@@ -10,6 +10,7 @@
   [attr.data-inverted]="inverted()"
   [attr.data-compact-spacing]="compactSpacing()"
   [attr.data-disabled]="option()?.disabled"
+  [attr.data-hidden]="isHidden()"
   (click)="onClickTabItem($event, option()?.id || '')"
   (mouseover)="handleMouseHover()"
   (mouseout)="handleMouseOut()"
