--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
@@ -17,13 +17,20 @@
   height: 100%;
   gap: $positive-spacing_300;
   justify-content: flex-start;
-  overflow-x: scroll;
-  overflow-y: visible;
   padding-bottom: 2px;
   margin-bottom: -2px;
   scrollbar-width: none;
   width: 100%;
   padding-top: 2px;
+  align-items: center;
+
+  &[data-direction='horizontal'] {
+    overflow-x: scroll;
+
+    &[data-overflow-type='dropdown'] {
+      overflow: hidden;
+    }
+  }
 
   &[data-direction='vertical'] {
     flex-direction: column;
@@ -97,5 +104,11 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  padding: 0
+  padding: 0;
+  margin: $positive-spacing_150;
+
+  &[data-inverted='true'] {
+    color: var(--content-primary-inverse);
+  }
+
 }
