feat(tab): add overflow type stories

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/tab/tab.component.scss
@@ -97,6 +97,8 @@
 }
 
 .rte-tab-dropdown-button {
+  @include typography-text-m-bold;
+  color: var(--content-secondary);
   width: max-content;
   display: flex;
   align-items: center;
