--- a/packages/react/src/components/tab/Tab.module.scss
+++ b/packages/react/src/components/tab/Tab.module.scss
@@ -101,6 +101,8 @@
 }
 
 .tab-dropdown-button {
+  @include typography-text-m-bold;
+  color: var(--content-secondary);
   width: max-content;
   display: flex;
   align-items: center;
