--- a/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/badge/badge.component.html
@@ -10,7 +10,7 @@
     [name]="icon()"
     [size]="iconSize()!"
   />
-  <p *ngIf="showText()" class="badge-text">
+  <span *ngIf="showText()" class="badge-text">
     {{ displayCount() }}
-  </p>
+  </span>
 </div>
