--- a/preview/tab/angular/components/badge/badge.component.html
+++ b/preview/tab/angular/components/badge/badge.component.html
@@ -10,7 +10,7 @@
     [name]="icon()"
     [size]="iconSize()!"
   />
-  <p *ngIf="showText()" class="badge-text">
+  <span *ngIf="showText()" class="badge-text">
     {{ displayCount() }}
-  </p>
+  </span>
 </div>
