deploy: 7d6fdec761bce69b1e76ca587bcfae2b0bca0b2b

--- a/preview/tab/angular/components/badge/badge.component.html
+++ b/preview/tab/angular/components/badge/badge.component.html
@@ -10,7 +10,7 @@
     [name]="icon()"
     [size]="iconSize()!"
   />
-  <span *ngIf="showText()" class="badge-text">
+  <p *ngIf="showText()" class="badge-text">
     {{ displayCount() }}
-  </span>
+  </p>
 </div>
