--- a/preview/tab/angular/components/badge/badge.component.scss
+++ b/preview/tab/angular/components/badge/badge.component.scss
@@ -82,4 +82,10 @@
     .badge-text {
         margin: 0;
     }
+
+    &[data-simple-badge="true"] {
+        position: static;
+        box-shadow: none;
+    }
+
 }
