--- a/preview/tab/angular/components/tab/tab.component.scss
+++ b/preview/tab/angular/components/tab/tab.component.scss
@@ -19,7 +19,6 @@
   justify-content: flex-start;
   padding-bottom: 2px;
   margin-bottom: -2px;
-  margin-left: -2px;
   scrollbar-width: none;
   width: 100%;
   padding-top: 2px;
@@ -103,17 +102,12 @@
   width: max-content;
   display: flex;
   align-items: center;
-  gap: $positive-spacing_150;
+  gap: 4px;
   background-color: transparent;
   border: none;
   cursor: pointer;
   padding: 0;
   margin: $positive-spacing_150;
-
-  &:focus-visible {
-    outline: 2px solid var(--border-brand-focused);
-    outline-offset: 8px;
-  }
 
   &[data-inverted='true'] {
     color: var(--content-primary-inverse);
