fix (dropdown): avoid scrollbar navigation while navigating a dropdown-menu using the keyboard

--- a/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/dropdown/dropdown-item/dropdown-item.component.html
@@ -12,6 +12,7 @@
       [attr.aria-disabled]="disabled()"
       [class.active]="isActive()"
       (click)="handleClick($event)"
+      (keydown)="handleKeyDown($event)"
     >
       <span *ngIf="hasIndent() && !leftIcon()" style="width: 20px"></span>
       <rte-icon *ngIf="leftIcon()" [name]="leftIcon() ?? ''" />
